// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/TableView default 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <button
          class="p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-download p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Export
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
     
    <div
      class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
    >
      <div
        class="responsive-table-wrapper p-fluid d-flex-1 p-d-flex"
      >
        <div
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component"
          style="flex-basis: 0px; position: sticky; left: 0px; z-index: 1;"
        >
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                >
                  <td
                    colspan="0"
                  >
                    <!---->
                     
                    <!---->
                  </td>
                </tr>
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <div
          cellstate="[object Object]"
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
          style="width: calc(3rem + 450px);"
        >
          <!---->
          <!---->
          <!---->
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                >
                  <td
                    colspan="0"
                  >
                    
        No data to display
      
                     
                    <!---->
                  </td>
                </tr>
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and toolbar buttons 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <button
          class="p-mr-2 p-button p-component"
          type="button"
        >
          <span
            class="pi pi-plus-circle p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Add
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-download p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Export
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
     
    <div
      class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
    >
      <div
        class="responsive-table-wrapper p-fluid d-flex-1 p-d-flex"
      >
        <div
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component"
          style="flex-basis: 0px; position: sticky; left: 0px; z-index: 1;"
        >
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                >
                  <td
                    colspan="0"
                  >
                    <!---->
                     
                    <!---->
                  </td>
                </tr>
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <div
          cellstate="[object Object]"
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
          style="width: calc(3rem + 450px);"
        >
          <!---->
          <!---->
          <!---->
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                >
                  <td
                    colspan="0"
                  >
                    
        No data to display
      
                     
                    <!---->
                  </td>
                </tr>
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
